--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <body>
     <header>
         <nav>
-            <div>
+            <a href="#" title="Botão tela inicial - Logo">
                 <img class="logo" src="./image/pataGato.svg" alt="Logo imagem da pata de um gato">
-            </div>
+            </a>
             <form>
                 <label for="busca">Pesquisa por artigos</label>
                 <input type="text" id="busca" placeholder="Pesquisa por artigos">
@@ -69,7 +69,7 @@
         </section>
         <article>
             <h2>Artigos relacionados</h2>
-            <div>
+            <a href="#">
                 <figure>
                     <img src="./image/artigo1.png" alt="Sábado preguiçoso">
                     <figcaption>
@@ -77,8 +77,8 @@
                         <p>Descubra atividades interessantes para fazer com seu pet durante os finais de semana.</p>
                     </figcaption>
                 </figure>
-            </div>
-            <div>
+            </a>
+            <a href="#">
                 <figure>
                     <img src="./image/artigo2.png" alt="Balaio de gatos">
                     <figcaption>
@@ -86,8 +86,8 @@
                         <p>Como evitar confusões entre seus gatíneos e acostumá-los desde filhotes.</p>
                     </figcaption>
                 </figure>
-            </div>
-            <div>
+            </a>
+            <a href="#">
                 <figure>
                     <img src="./image/artigo3.png" alt="Cartela de cores">
                     <figcaption>
@@ -96,8 +96,8 @@
                             bichano.</p>
                     </figcaption>
                 </figure>
-            </div>
-            <div>
+            </a>
+            <a href="#">
                 <figure>
                     <img src="./image/artigo4.png" alt="Os gatos sentem frio?">
                     <figcaption>
@@ -105,8 +105,8 @@
                         <p>Preparem-se para a frente fria que vem para o país da melhor maneira possível.</p>
                     </figcaption>
                 </figure>
-            </div>
-            <div>
+            </a>
+            <a href="#">
                 <figure>
                     <img src="./image/artigo5.png" alt="Conheça o Moacir">
                     <figcaption>
@@ -114,7 +114,7 @@
                         <p>Moacir é o gatinho da semana do nosso blog. Venha conhecer sua história de superação.</p>
                     </figcaption>
                 </figure>
-            </div>
+            </a>
 
         </article>
     </main>
